Extracción de data casi completa para una página de vino individual. Falta incluir precio, comidas, región, uvas, etc.

--- a/src/data/scraper_filters.ipynb
+++ b/src/data/scraper_filters.ipynb
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -149,6 +149,14 @@
        "      <th>wine_link</th>\n",
        "      <th>name</th>\n",
        "      <th>year</th>\n",
+       "      <th>winery</th>\n",
+       "      <th>rating</th>\n",
+       "      <th>rating_qty</th>\n",
+       "      <th>body</th>\n",
+       "      <th>tannis</th>\n",
+       "      <th>sweetness</th>\n",
+       "      <th>acidity</th>\n",
+       "      <th>notes</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -157,221 +165,63 @@
        "      <td>https://www.vivino.com/US/en/luigi-bosca-parai...</td>\n",
        "      <td>Paraiso</td>\n",
        "      <td>2020</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>https://www.vivino.com/US/en/catena-zapata-est...</td>\n",
-       "      <td>Estiba Reservada</td>\n",
-       "      <td>2015</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>https://www.vivino.com/US/en/catena-zapata-est...</td>\n",
-       "      <td>Estiba Reservada</td>\n",
-       "      <td>2017</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>https://www.vivino.com/US/en/monteviejo-la-vio...</td>\n",
-       "      <td>La Violeta</td>\n",
-       "      <td>2013</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>https://www.vivino.com/US/en/vina-cobos-cobos-...</td>\n",
-       "      <td>Cobos Volturno</td>\n",
-       "      <td>2018</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>https://www.vivino.com/US/en/monteviejo-la-vio...</td>\n",
-       "      <td>La Violeta</td>\n",
-       "      <td>2014</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>https://www.vivino.com/US/en/vina-cobos-cobos-...</td>\n",
-       "      <td>Cobos Viña Cobos Malbec</td>\n",
-       "      <td>2019</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>https://www.vivino.com/US/en/catena-zapata-adr...</td>\n",
-       "      <td>Adrianna Vineyard Mundus Bacillus Terrae Malbec</td>\n",
-       "      <td>2017</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>https://www.vivino.com/US/en/vina-cobos-cobos-...</td>\n",
-       "      <td>Cobos Volturno</td>\n",
-       "      <td>2019</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>https://www.vivino.com/US/en/vina-cobos-cobos-...</td>\n",
-       "      <td>Cobos Volturno</td>\n",
-       "      <td>2020</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>https://www.vivino.com/US/en/catena-zapata-nic...</td>\n",
-       "      <td>Nicolás Catena Zapata</td>\n",
-       "      <td>2017</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11</th>\n",
-       "      <td>https://www.vivino.com/US/en/catena-zapata-mal...</td>\n",
-       "      <td>Malbec Argentino</td>\n",
-       "      <td>2020</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12</th>\n",
-       "      <td>https://www.vivino.com/US/en/catena-zapata-mal...</td>\n",
-       "      <td>Malbec Argentino</td>\n",
-       "      <td>2021</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>13</th>\n",
-       "      <td>https://www.vivino.com/US/en/el-enemigo-gran-e...</td>\n",
-       "      <td>Gran Enemigo Single Vineyard Chacayes Cabernet...</td>\n",
-       "      <td>2016</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>14</th>\n",
-       "      <td>https://www.vivino.com/US/en/susana-balbo-noso...</td>\n",
-       "      <td>Nosotros Single Vineyard Nómade</td>\n",
-       "      <td>2018</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>15</th>\n",
-       "      <td>https://www.vivino.com/US/en/catena-zapata-adr...</td>\n",
-       "      <td>Adrianna Vineyard Mundus Bacillus Terrae Malbec</td>\n",
-       "      <td>2013</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>16</th>\n",
-       "      <td>https://www.vivino.com/US/en/catena-zapata-mal...</td>\n",
-       "      <td>Malbec Argentino</td>\n",
-       "      <td>2004</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>17</th>\n",
-       "      <td>https://www.vivino.com/US/en/catena-zapata-adr...</td>\n",
-       "      <td>Adrianna Vineyard Mundus Bacillus Terrae Malbec</td>\n",
-       "      <td>2018</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>18</th>\n",
-       "      <td>https://www.vivino.com/US/en/catena-zapata-adr...</td>\n",
-       "      <td>Adrianna Vineyard Mundus Bacillus Terrae Malbec</td>\n",
-       "      <td>2020</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>19</th>\n",
-       "      <td>https://www.vivino.com/US/en/catena-zapata-adr...</td>\n",
-       "      <td>Adrianna Vineyard River Malbec</td>\n",
-       "      <td>2021</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>20</th>\n",
-       "      <td>https://www.vivino.com/US/en/monteviejo-la-vio...</td>\n",
-       "      <td>La Violeta</td>\n",
-       "      <td>2015</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>21</th>\n",
-       "      <td>https://www.vivino.com/US/en/catena-zapata-adr...</td>\n",
-       "      <td>Adrianna Vineyard Fortuna Terrae Malbec</td>\n",
-       "      <td>2021</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>22</th>\n",
-       "      <td>https://www.vivino.com/US/en/bodegas-bianchi-e...</td>\n",
-       "      <td>Enzo Bianchi Gran Corte</td>\n",
-       "      <td>2020</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>23</th>\n",
-       "      <td>https://www.vivino.com/US/en/catena-zapata-nic...</td>\n",
-       "      <td>Nicolás Catena Zapata</td>\n",
-       "      <td>2019</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>24</th>\n",
-       "      <td>https://www.vivino.com/US/en/vina-cobos-vincul...</td>\n",
-       "      <td>Vinculum Malbec</td>\n",
-       "      <td>2018</td>\n",
+       "      <td>Luigi Bosca</td>\n",
+       "      <td>4.8</td>\n",
+       "      <td>574</td>\n",
+       "      <td>73.43435%</td>\n",
+       "      <td>50.905894999999994%</td>\n",
+       "      <td>13.619732499999998%</td>\n",
+       "      <td>44.74824%</td>\n",
+       "      <td>\"{'black fruit': '14', 'oaky': '13', 'earthy':...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                            wine_link  \\\n",
-       "0   https://www.vivino.com/US/en/luigi-bosca-parai...   \n",
-       "1   https://www.vivino.com/US/en/catena-zapata-est...   \n",
-       "2   https://www.vivino.com/US/en/catena-zapata-est...   \n",
-       "3   https://www.vivino.com/US/en/monteviejo-la-vio...   \n",
-       "4   https://www.vivino.com/US/en/vina-cobos-cobos-...   \n",
-       "5   https://www.vivino.com/US/en/monteviejo-la-vio...   \n",
-       "6   https://www.vivino.com/US/en/vina-cobos-cobos-...   \n",
-       "7   https://www.vivino.com/US/en/catena-zapata-adr...   \n",
-       "8   https://www.vivino.com/US/en/vina-cobos-cobos-...   \n",
-       "9   https://www.vivino.com/US/en/vina-cobos-cobos-...   \n",
-       "10  https://www.vivino.com/US/en/catena-zapata-nic...   \n",
-       "11  https://www.vivino.com/US/en/catena-zapata-mal...   \n",
-       "12  https://www.vivino.com/US/en/catena-zapata-mal...   \n",
-       "13  https://www.vivino.com/US/en/el-enemigo-gran-e...   \n",
-       "14  https://www.vivino.com/US/en/susana-balbo-noso...   \n",
-       "15  https://www.vivino.com/US/en/catena-zapata-adr...   \n",
-       "16  https://www.vivino.com/US/en/catena-zapata-mal...   \n",
-       "17  https://www.vivino.com/US/en/catena-zapata-adr...   \n",
-       "18  https://www.vivino.com/US/en/catena-zapata-adr...   \n",
-       "19  https://www.vivino.com/US/en/catena-zapata-adr...   \n",
-       "20  https://www.vivino.com/US/en/monteviejo-la-vio...   \n",
-       "21  https://www.vivino.com/US/en/catena-zapata-adr...   \n",
-       "22  https://www.vivino.com/US/en/bodegas-bianchi-e...   \n",
-       "23  https://www.vivino.com/US/en/catena-zapata-nic...   \n",
-       "24  https://www.vivino.com/US/en/vina-cobos-vincul...   \n",
+       "                                           wine_link     name  year  \\\n",
+       "0  https://www.vivino.com/US/en/luigi-bosca-parai...  Paraiso  2020   \n",
        "\n",
-       "                                                 name  year  \n",
-       "0                                             Paraiso  2020  \n",
-       "1                                    Estiba Reservada  2015  \n",
-       "2                                    Estiba Reservada  2017  \n",
-       "3                                          La Violeta  2013  \n",
-       "4                                      Cobos Volturno  2018  \n",
-       "5                                          La Violeta  2014  \n",
-       "6                             Cobos Viña Cobos Malbec  2019  \n",
-       "7     Adrianna Vineyard Mundus Bacillus Terrae Malbec  2017  \n",
-       "8                                      Cobos Volturno  2019  \n",
-       "9                                      Cobos Volturno  2020  \n",
-       "10                              Nicolás Catena Zapata  2017  \n",
-       "11                                   Malbec Argentino  2020  \n",
-       "12                                   Malbec Argentino  2021  \n",
-       "13  Gran Enemigo Single Vineyard Chacayes Cabernet...  2016  \n",
-       "14                    Nosotros Single Vineyard Nómade  2018  \n",
-       "15    Adrianna Vineyard Mundus Bacillus Terrae Malbec  2013  \n",
-       "16                                   Malbec Argentino  2004  \n",
-       "17    Adrianna Vineyard Mundus Bacillus Terrae Malbec  2018  \n",
-       "18    Adrianna Vineyard Mundus Bacillus Terrae Malbec  2020  \n",
-       "19                     Adrianna Vineyard River Malbec  2021  \n",
-       "20                                         La Violeta  2015  \n",
-       "21            Adrianna Vineyard Fortuna Terrae Malbec  2021  \n",
-       "22                            Enzo Bianchi Gran Corte  2020  \n",
-       "23                              Nicolás Catena Zapata  2019  \n",
-       "24                                    Vinculum Malbec  2018  "
+       "        winery rating rating_qty       body               tannis  \\\n",
+       "0  Luigi Bosca    4.8        574  73.43435%  50.905894999999994%   \n",
+       "\n",
+       "             sweetness    acidity  \\\n",
+       "0  13.619732499999998%  44.74824%   \n",
+       "\n",
+       "                                               notes  \n",
+       "0  \"{'black fruit': '14', 'oaky': '13', 'earthy':...  "
       ]
      },
-     "execution_count": 31,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "csv = pd.read_csv(\"wine_links.csv\")\n",
+    "from selenium import webdriver\n",
+    "from selenium.webdriver.common.by import By\n",
+    "from selenium.webdriver.chrome.service import Service\n",
+    "from selenium.webdriver.common.action_chains import ActionChains\n",
+    "from selenium.webdriver.support.ui import WebDriverWait\n",
+    "from selenium.webdriver.support import expected_conditions as EC\n",
+    "from webdriver_manager.chrome import ChromeDriverManager\n",
+    "from bs4 import BeautifulSoup\n",
+    "import time\n",
+    "import pandas as pd\n",
+    "import json\n",
+    "\n",
+    "csv = pd.read_csv(\"wine_test.csv\")\n",
     "wine_df = pd.DataFrame(csv, columns=[\"wine_link\"])\n",
     "wine_df[\"name\"] = None\n",
     "wine_df[\"year\"] = None\n",
+    "wine_df[\"winery\"] = None\n",
+    "wine_df[\"rating\"] = None\n",
+    "wine_df[\"rating_qty\"] = None\n",
+    "wine_df[\"body\"] = None\n",
+    "wine_df[\"tannis\"] = None\n",
+    "wine_df[\"sweetness\"] = None\n",
+    "wine_df[\"acidity\"] = None\n",
+    "wine_df[\"notes\"] = None\n",
     "\n",
     "options = webdriver.ChromeOptions()\n",
     "options.headless = False  \n",
@@ -398,10 +248,65 @@
     "            year_text = parent_div.get_text(strip=True)\n",
     "            wine_year = year_text.replace(wine_name, \"\").strip()\n",
     "\n",
+    "    # DATA 3: BODEGA (WINERY)\n",
+    "    winery = soup.find(\"h1\").find(\"div\").find(\"a\").find(\"div\").get_text(strip=True)\n",
+    "\n",
+    "    # DATA 4: REVIEWS (Rating)\n",
+    "    rating_tag = soup.find(\"a\", {\"href\": \"#all_reviews\"})\n",
+    "    rating_value = rating_tag.find(\"div\").find(\"div\").get_text(strip=True)\n",
+    "    rating_qty = rating_tag.find_all(\"div\")[-1].get_text(strip=True).split(\" \")[0]\n",
+    "\n",
+    "    # DATA 5: TASTE (Sabor)\n",
+    "\n",
+    "    wine_taste = soup.find_all(\"tr\", {\"class\": \"tasteStructure__tasteCharacteristic--jLtsE\"})\n",
+    "\n",
+    "    #taste_dict = {\n",
+    "    #    \"body\": \"\",\n",
+    "    #    \"tannis\": \"\",\n",
+    "    #    \"sweetness\": \"\",\n",
+    "    #    \"acidity\": \"\"\n",
+    "    #}\n",
+    "\n",
+    "    taste_val_list = []\n",
+    "    for i in range(4):\n",
+    "        bar = wine_taste[i].find(\"span\", {\"class\", \"indicatorBar__progress--3aXLX\"})[\"style\"]\n",
+    "        val = bar.split(\";\")[1].split(\":\")[1]\n",
+    "        taste_val_list.append(val)\n",
+    "\n",
+    "    # 5.1 : Light/Bold - Body (Cuerpo)   \n",
+    "    body = taste_val_list[0]\n",
+    "    # 5.2 : Smooth/Tannic - Tannis (Tanicidad)\n",
+    "    tannis = taste_val_list[1]\n",
+    "    # 5.3 : Dry/Sweet - Sweetness (Dulzura)\n",
+    "    sweetness = taste_val_list[2]\n",
+    "    # 5.4 : Soft/Acid - Acidity (Acidez)\n",
+    "    acidity = taste_val_list[3]\n",
+    "\n",
+    "\n",
+    "    # DATA 6 : NOTE MENTIONS (menciones de notas)\n",
+    "\n",
+    "    mentions = soup.find_all(\"div\", {\"data-testid\": \"mentions\"})\n",
+    "\n",
+    "    mentions_dict = {}\n",
+    "\n",
+    "    for mention in mentions:\n",
+    "        note = mention.find(\"span\").get_text(strip=True)\n",
+    "        n_mentions = mention.get_text().split(\" \")[0]\n",
+    "        mentions_dict[str(note)] = str(n_mentions)\n",
+    "\n",
+    "\n",
     "    # ÚLTIMO PASO: GUARDAR EN DATAFRAME\n",
     "    wine_df.at[index, \"name\"] = wine_name\n",
     "    wine_df.at[index, \"year\"] = wine_year\n",
-    "\n",
+    "    wine_df.at[index, \"winery\"] = winery\n",
+    "    wine_df.at[index, \"rating\"] = rating_value\n",
+    "    wine_df.at[index, \"rating_qty\"] = rating_qty\n",
+    "    wine_df.at[index, \"body\"] = body\n",
+    "    wine_df.at[index, \"tannis\"] = tannis\n",
+    "    wine_df.at[index, \"sweetness\"] = sweetness\n",
+    "    wine_df.at[index, \"acidity\"] = acidity\n",
+    "    wine_df[\"notes\"] = str(mentions_dict)\n",
+    "    wine_df[\"notes\"] = wine_df[\"notes\"].apply(json.dumps)\n",
     "# Guardar el CSV actualizado\n",
     "wine_df.to_csv(\"updated_test.csv\", index=False)\n",
     "\n",
@@ -409,13 +314,6 @@
     "\n",
     "wine_df"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
