Data disponible. Mejor organización. Refactorización de scraper_links

--- a/notebooks/scraper_filters.ipynb
+++ b/notebooks/scraper_filters.ipynb
@@ -129,7 +129,10 @@
     "    next_page_available = getPageLinks(link_list)\n",
     "\n",
     "link_df = pd.DataFrame(link_list, columns=[\"wine_link\"])\n",
-    "link_df.to_csv(\"wine_links.csv\", index=False)\n",
+    "\n",
+    "route_save = \"../src/data/raw/links/\"\n",
+    "\n",
+    "link_df.to_csv(route_save + \"wine_links.csv\", index=False)\n",
     "\n",
     "driver.quit()"
    ]
@@ -151,7 +154,9 @@
     "import time\n",
     "import pandas as pd\n",
     "\n",
-    "csv = pd.read_csv(\"/links/rest-links3.csv\")\n",
+    "route_import = \"../src/data/raw/links/\"\n",
+    "\n",
+    "csv = pd.read_csv(route_import + \"rest-links3.csv\")\n",
     "wine_df = pd.DataFrame(csv, columns=[\"wine_link\"]).drop_duplicates()\n",
     "wine_df[\"name\"] = None\n",
     "wine_df[\"year\"] = None\n",
@@ -356,8 +361,11 @@
     "    wine_df.at[index, \"style\"] = style\n",
     "    wine_df.at[index, \"image\"] = img\n",
     "\n",
+    "\n",
+    "route_save = \"../src/data/raw/scraped_wines/\"\n",
+    "\n",
     "# Guardar el CSV actualizado\n",
-    "wine_df.to_csv(\"/scraped_wines/wines1056-2026.csv\", index=False)\n",
+    "wine_df.to_csv(route_save + \"wines1056-2026.csv\", index=False)\n",
     "\n",
     "driver.quit()\n",
     "\n",
@@ -380,27 +388,30 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "route_import = \"../src/data/raw/links/\"\n",
     "wines_left = wine_df.loc[wine_df[\"name\"].isna()][\"wine_link\"]\n",
-    "wines_left.to_csv(\"rest-links3.csv\", index=False)"
+    "wines_left.to_csv(route_import + \"rest-links3.csv\", index=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "\n",
-    "route = \"./scraped_wines/\"\n",
-    "wines_1 = pd.read_csv(route + \"wines1-155.csv\")\n",
-    "wines_2 = pd.read_csv(route + \"wines156-866.csv\")\n",
-    "wines_3 = pd.read_csv(route + \"wines867-1055.csv\")\n",
-    "wines_4 = pd.read_csv(route + \"wines1056-2026.csv\")\n",
+    "route_import = \"../src/data/raw/scraped_wines/\"\n",
+    "wines_1 = pd.read_csv(route_import + \"wines1-155.csv\")\n",
+    "wines_2 = pd.read_csv(route_import + \"wines156-866.csv\")\n",
+    "wines_3 = pd.read_csv(route_import + \"wines867-1055.csv\")\n",
+    "wines_4 = pd.read_csv(route_import + \"wines1056-2026.csv\")\n",
     "\n",
     "df_wines_list = [wines_1, wines_2, wines_3, wines_4]\n",
     "\n",
     "all_wines = pd.concat(df_wines_list, ignore_index=True, sort=False)\n",
+    "\n",
+    "route_save = \"../src/data/processed/\"\n",
     "\n",
     "all_wines.to_csv(\"all_wines.csv\", index=False)"
    ]
