--- a/notebooks/eda_etl_draft copy.ipynb
+++ b/notebooks/eda_etl_draft copy.ipynb
@@ -1210,6 +1210,244 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>wine_link</th>\n",
+       "      <th>region</th>\n",
+       "      <th>region_fix</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1267</th>\n",
+       "      <td>https://www.vivino.com/felipe-staiti-honor-ble...</td>\n",
+       "      <td>['15%']</td>\n",
+       "      <td>['Argentina', 'Mendoza', 'Uco Valley']</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1430</th>\n",
+       "      <td>https://www.vivino.com/mairena-blend/w/3812464...</td>\n",
+       "      <td>['Contains sulfites']</td>\n",
+       "      <td>['Argentina', 'Mendoza', 'Lujan de Cuyo']</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1526</th>\n",
+       "      <td>https://www.vivino.com/kaiken-francis-mallmann...</td>\n",
+       "      <td>['Contains sulfites']</td>\n",
+       "      <td>['Argentina', 'Mendoza']</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1539</th>\n",
+       "      <td>https://www.vivino.com/kaiken-francis-mallmann...</td>\n",
+       "      <td>['14%']</td>\n",
+       "      <td>['Argentina', 'Mendoza']</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1545</th>\n",
+       "      <td>https://www.vivino.com/los-haroldos-gran-corte...</td>\n",
+       "      <td>['14%']</td>\n",
+       "      <td>['Argentina', 'Mendoza']</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1634</th>\n",
+       "      <td>https://www.vivino.com/kaiken-nude-rose/w/1175...</td>\n",
+       "      <td>['Argentinian Rosé']</td>\n",
+       "      <td>['Argentina', 'Mendoza', 'Lujan de Cuyo']</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1795</th>\n",
+       "      <td>https://www.vivino.com/vaglio-ar-blanco/w/7254...</td>\n",
+       "      <td>['Argentinian White']</td>\n",
+       "      <td>['Argentina', 'Mendoza']</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1801</th>\n",
+       "      <td>https://www.vivino.com/tapiz-san-pablo-single-...</td>\n",
+       "      <td>['Contains sulfites']</td>\n",
+       "      <td>['Argentina', 'Mendoza']</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1819</th>\n",
+       "      <td>https://www.vivino.com/cali-vista-red-blend/w/...</td>\n",
+       "      <td>['Contains sulfites']</td>\n",
+       "      <td>['Argentina', 'Mendoza']</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                              wine_link  \\\n",
+       "1267  https://www.vivino.com/felipe-staiti-honor-ble...   \n",
+       "1430  https://www.vivino.com/mairena-blend/w/3812464...   \n",
+       "1526  https://www.vivino.com/kaiken-francis-mallmann...   \n",
+       "1539  https://www.vivino.com/kaiken-francis-mallmann...   \n",
+       "1545  https://www.vivino.com/los-haroldos-gran-corte...   \n",
+       "1634  https://www.vivino.com/kaiken-nude-rose/w/1175...   \n",
+       "1795  https://www.vivino.com/vaglio-ar-blanco/w/7254...   \n",
+       "1801  https://www.vivino.com/tapiz-san-pablo-single-...   \n",
+       "1819  https://www.vivino.com/cali-vista-red-blend/w/...   \n",
+       "\n",
+       "                     region                                 region_fix  \n",
+       "1267                ['15%']     ['Argentina', 'Mendoza', 'Uco Valley']  \n",
+       "1430  ['Contains sulfites']  ['Argentina', 'Mendoza', 'Lujan de Cuyo']  \n",
+       "1526  ['Contains sulfites']                   ['Argentina', 'Mendoza']  \n",
+       "1539                ['14%']                   ['Argentina', 'Mendoza']  \n",
+       "1545                ['14%']                   ['Argentina', 'Mendoza']  \n",
+       "1634   ['Argentinian Rosé']  ['Argentina', 'Mendoza', 'Lujan de Cuyo']  \n",
+       "1795  ['Argentinian White']                   ['Argentina', 'Mendoza']  \n",
+       "1801  ['Contains sulfites']                   ['Argentina', 'Mendoza']  \n",
+       "1819  ['Contains sulfites']                   ['Argentina', 'Mendoza']  "
+      ]
+     },
+     "execution_count": 70,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Fixed Price Quality Check (Region)\n",
+    "# Existen algunos que tienen las grapes mal scrapeadas\n",
+    "fixed_df = wines_df.join(pricefix_df.set_index(\"wine_link\"), on=\"wine_link\", rsuffix=\"_fix\")\n",
+    "\n",
+    "col1 = \"region\"\n",
+    "col2 = col1 + \"_fix\"\n",
+    "\n",
+    "fix_df = fixed_df[fixed_df[\"price\"].isna() & (fixed_df[col1] != fixed_df[col2])][[\"wine_link\", col1, col2]]\n",
+    "\n",
+    "fix_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>wine_link</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>https://www.vivino.com/US/en/luigi-bosca-parai...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>https://www.vivino.com/US/en/catena-zapata-est...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>https://www.vivino.com/US/en/catena-zapata-est...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>https://www.vivino.com/US/en/monteviejo-la-vio...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>https://www.vivino.com/US/en/vina-cobos-cobos-...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2037</th>\n",
+       "      <td>https://www.vivino.com/etchart-cafayate-terroi...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2038</th>\n",
+       "      <td>https://www.vivino.com/siesta-cabernet-sauvign...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2039</th>\n",
+       "      <td>https://www.vivino.com/gen-del-alma-jijiji-mal...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2040</th>\n",
+       "      <td>https://www.vivino.com/terrazas-de-los-andes-h...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2271</th>\n",
+       "      <td>https://www.vivino.com/ar-navarro-correas-gran...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>2026 rows × 1 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                              wine_link\n",
+       "0     https://www.vivino.com/US/en/luigi-bosca-parai...\n",
+       "1     https://www.vivino.com/US/en/catena-zapata-est...\n",
+       "2     https://www.vivino.com/US/en/catena-zapata-est...\n",
+       "3     https://www.vivino.com/US/en/monteviejo-la-vio...\n",
+       "4     https://www.vivino.com/US/en/vina-cobos-cobos-...\n",
+       "...                                                 ...\n",
+       "2037  https://www.vivino.com/etchart-cafayate-terroi...\n",
+       "2038  https://www.vivino.com/siesta-cabernet-sauvign...\n",
+       "2039  https://www.vivino.com/gen-del-alma-jijiji-mal...\n",
+       "2040  https://www.vivino.com/terrazas-de-los-andes-h...\n",
+       "2271  https://www.vivino.com/ar-navarro-correas-gran...\n",
+       "\n",
+       "[2026 rows x 1 columns]"
+      ]
+     },
+     "execution_count": 74,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "wine_links = pd.read_csv(\"../src/data/raw/links/wine_links.csv\")\n",
+    "wine_links.drop_duplicates()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
